updating some content

--- a/_mdx/java/java-2.mdx
+++ b/_mdx/java/java-2.mdx
@@ -4,9 +4,9 @@ tags: java, micro-service, backend
 description: Simple RESTful API that will allow either all Pokemon OR By Generation.
 expertise: beginner
 ---
+Much like PokeAPI, have an endpoint (doesn't matter what framework IF any you use) return a set of pokemon.
 
-bunch of pokemon:
-
+bunch of pokemon to use:
 ```json
 [
   {
@@ -29,3 +29,6 @@ bunch of pokemon:
   }
 ]
 ```
+
+<h2>BONUS</h2>
+Allow filtering by pokemon type.
