--- a/_mdx/javascript/url-shortener.mdx
+++ b/_mdx/javascript/url-shortener.mdx
@@ -5,4 +5,6 @@ description: Similar to functionality on bit.ly - create a url shortener that re
 expertise: intermediate
 ---
 
+Create a link shortener.
+
 additional bonus - allow users to use their own domain as part of the shorteners.
