Added a bunch of new projects

--- a/_mdx/base-project.mdx
+++ b/_mdx/base-project.mdx
@@ -3,6 +3,7 @@ title: Title
 tags: java, micro-service, backend
 description: Small description
 expertise: beginner
+thumbId: Get From Unsplash an id
 ---
 
 Create a simple Rest endpoint that allows GET, PUT, UPDATE, DELETE
