--- a/_mdx/javascript/tic-tac-toe-vanilliajs.mdx
+++ b/_mdx/javascript/tic-tac-toe-vanilliajs.mdx
@@ -1,8 +1,30 @@
 ---
 title: Tic Tac Toe
-tags: web, javascript, typescript
-expertise: intermediate
+tags: javascript, html, css
+description: a simple Tic Tac Toe game using HTML, CSS, and JavaScript
+expertise: beginner
+thumbId: pcpsVsyFp_s
 ---
-Tic-Tac-Toe is a two-player turn-based game that has its roots in ancient Egypt and dates back to roughly 1300 BC. It is played on a 3x3 grid with X and O markers. The game is won by the player who arranges their marks on the grid in a row, column, or diagonal first.
 
-Create this in Vanilla JS.
+Tic Tac Toe is a classic game that has been enjoyed by people of all ages for generations. Now it's time to create your own version of this classic game using vanilla JavaScript!
+
+<h1>Create a Tic Tac Toe game</h1>
+<h2>Requirements</h2>
+<ul>
+  <li>A 3x3 grid where players can place their respective symbols (X or O)</li>
+  <li>A way to alternate turns between players</li>
+  <li>
+    A way to determine when the game is over (e.g. when one player gets three in
+    a row or the board is full)
+  </li>
+</ul>
+<h2>Bonus</h2>
+<ul>
+  <li>
+    Can you add a feature that allows players to play against the computer?
+  </li>
+  <li>
+    Can you add a feature that keeps track of the score and allows players to
+    play multiple games?
+  </li>
+</ul>
