--- a/_mdx/javascript/url-shortener.mdx
+++ b/_mdx/javascript/url-shortener.mdx
@@ -1,10 +1,32 @@
 ---
 title: URL Shortener
-tags: full-stack, js, ts
-description: Similar to functionality on bit.ly - create a url shortener that redirects users from a url.
+tags: javascript, node.js, express
+description: a simple URL shortening application using Node.js and Express
 expertise: intermediate
+thumbId: pcpsVsyFp_s
 ---
 
-Create a link shortener.
+Have you ever wanted to share a long URL with someone, but didn't want to take up too much space in a text message or social media post? A URL shortener can help with that!
 
-additional bonus - allow users to use their own domain as part of the shorteners.
+<h1>Create a URL Shortener</h1>
+<h2>Requirements</h2>
+<ul>
+  <li>A form where users can input a long URL</li>
+  <li>A way to generate a shortened URL for the inputted URL</li>
+  <li>A way to store the mapping between the long and short URLs</li>
+  <li>
+    A way to redirect users to the original long URL when they visit the short
+    URL
+  </li>
+</ul>
+<h2>Bonus</h2>
+<ul>
+  <li>
+    Can you add a feature that allows users to customize the shortened URL (e.g.
+    by choosing a specific keyword)?
+  </li>
+  <li>
+    Can you add a feature that displays the number of times each short URL has
+    been visited?
+  </li>
+</ul>
