--- a/_mdx/python/initial-python.mdx
+++ b/_mdx/python/initial-python.mdx
@@ -1,7 +1,34 @@
 ---
 title: Twitter Scraper
-tags: scraping
+tags: python, web scraping
+description: a simple Twitter scraper using Python and web scraping techniques
 expertise: intermediate
+thumbId: pcpsVsyFp_s
 ---
 
-Scrape a twitter profile and make the most commonly used words.
+Twitter is a popular social media platform where users can post short messages, called tweets, and interact with others. As a data scientist or developer, you may want to analyze the content and sentiment of tweets for a particular topic or user.
+
+<h1>Create a Twitter Scraper</h1>
+<h2>Requirements</h2>
+<ul>
+  <li>A way to scrape tweets from a specific user or hashtag</li>
+  <li>
+    A way to extract relevant information from the tweets (e.g. text, hashtags,
+    mentions, etc.)
+  </li>
+  <li>
+    A way to store the scraped tweets in a format suitable for further analysis
+    (e.g. CSV, JSON, etc.)
+  </li>
+</ul>
+<h2>Bonus</h2>
+<ul>
+  <li>
+    Can you add a feature that allows users to specify a date range for the
+    tweets to be scraped?
+  </li>
+  <li>
+    Can you add a feature that performs sentiment analysis on the scraped tweets
+    and stores the results?
+  </li>
+</ul>
