Pushed new images

--- a/_mdx/java/blogging-platform.mdx
+++ b/_mdx/java/blogging-platform.mdx
@@ -3,7 +3,7 @@ title: Blogging Platform API
 tags: java, API, MongoDB
 description: A simple blogging platform API using Java and MongoDB
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: qB249VQDUnE
 ---
 
 A blogging platform API allows users to create, edit, and delete posts using a server-side language and a database like MongoDB. In this project, you will build a simple blogging platform API using Java and MongoDB.
