--- a/_mdx/java/chat-api.mdx
+++ b/_mdx/java/chat-api.mdx
@@ -3,7 +3,7 @@ title: Chat API
 tags: java, API, websockets
 description: a simple chat API using Java and Socket.io
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: qgInQSplXBU
 ---
 
 A chat application API allows users to send and receive messages in real-time using a server-side language and a websocket library like Socket.io. In this project, you will create a basic chat application API using Java and Socket.io.
