--- a/_mdx/java/initial-rest-java.mdx
+++ b/_mdx/java/initial-rest-java.mdx
@@ -3,7 +3,9 @@ title: Initial Rest API
 tags: java, micro-service, backend
 description: Create a simple Rest API within a MVC Framework of your choice.
 expertise: beginner
+thumbId: QUHuwyNgSA0
 ---
+
 Create a simple Rest endpoint that allows GET, PUT, UPDATE, DELETE
 
 Heres your starting point :
@@ -12,11 +14,9 @@ Heres your starting point :
 @Controller
 public class RootController {
 
-	@GetMapping("/hello")
-	public String greeting() {
-		return "FooBar!";
-	}
-
+  @GetMapping("/hello")
+  public String greeting() {
+    return "FooBar!";
+  }
 }
 ```
-
