--- a/_mdx/java/pokemon-rest-api.mdx
+++ b/_mdx/java/pokemon-rest-api.mdx
@@ -3,6 +3,7 @@ title: Pokemon Rest API
 tags: java, micro-service, backend
 description: Simple RESTful API that will allow either all Pokemon OR By Generation.
 expertise: beginner
+thumbId: DypO_XgAE4Y
 ---
 
 Much like PokeAPI, have an endpoint (doesn't matter what framework IF any you use) return a set of pokemon.
