--- a/_mdx/java/s3-image-uploader.mdx
+++ b/_mdx/java/s3-image-uploader.mdx
@@ -3,7 +3,7 @@ title: Image Uploader API
 tags: java, AWS, S3, backend
 description: a simple image uploader API using Java and AWS S3
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: BrunIOLQMfQ
 ---
 
 An image uploader API allows users to upload and retrieve images from a database using a server-side language and a cloud storage service like AWS S3. In this project, you will create a basic image uploader API using Java and AWS S3.
