--- a/_mdx/java/weather-api.mdx
+++ b/_mdx/java/weather-api.mdx
@@ -3,7 +3,7 @@ title: Weather API
 tags: java, API, backend
 description: a simple weather API using Java and an external weather API
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: WWl6xaSHFIo
 ---
 
 A weather API allows users to retrieve weather data from an external source and format it in a way that is useful for their application. In this project, you will build a simple weather API using Java and an external weather API.
