--- a/_mdx/javascript/basic-image-gallery.mdx
+++ b/_mdx/javascript/basic-image-gallery.mdx
@@ -3,7 +3,7 @@ title: Image Gallery
 tags: javascript, html, css
 description: a simple image gallery using HTML, CSS, and JavaScript
 expertise: beginner
-thumbId: pcpsVsyFp_s
+thumbId: cYyqhdbJ9TI
 ---
 
 An image gallery is a common feature on websites that allows users to browse a collection of images. In this project, you will create a basic image gallery using HTML, CSS, and JavaScript.
