--- a/_mdx/javascript/pokemon-pokedex-vanillajs-intermediate.mdx
+++ b/_mdx/javascript/pokemon-pokedex-vanillajs-intermediate.mdx
@@ -3,7 +3,7 @@ title: Pokémon Pokedex
 tags: javascript, react, redux
 description: a simple Pokémon Pokedex application using React and Redux
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: dPKv2iI5ChU
 ---
 
 As a Pokémon trainer, it's important to know all about the different species of Pokémon that exist in the world. With a Pokedex, you can easily look up information about any Pokémon you encounter on your journey.
