--- a/_mdx/javascript/pokemon-pokedex-vanillajs.mdx
+++ b/_mdx/javascript/pokemon-pokedex-vanillajs.mdx
@@ -1,16 +1,14 @@
 ---
 title: Pokemon Pokedex shower
 tags: web, javascript, typescript
+description: simple pokedex displayer in JS, HTML and CSS
 expertise: beginner
+thumbId: dip9IIwUK6w
 ---
 
 Using the API over at https://pokeapi.co/ - display the first generation of pokemon.
 
-Should show:
-    - Pokemon Number
-    - Pokemon Name
-    - Pokemon Sprite/Image (Exists on the endpoint)
-    - Pokemon Type
+Should show: - Pokemon Number - Pokemon Name - Pokemon Sprite/Image (Exists on the endpoint) - Pokemon Type
 
 <h2>BONUS</h2>
 Paginate your pokedex.
