--- a/_mdx/javascript/simple-calculator.mdx
+++ b/_mdx/javascript/simple-calculator.mdx
@@ -3,7 +3,7 @@ title: Calculator
 tags: javascript, html, css
 description: a simple calculator application using HTML, CSS, and JavaScript
 expertise: beginner
-thumbId: pcpsVsyFp_s
+thumbId: GlavtG-umzE
 ---
 
 A calculator is a common tool that we use for basic arithmetic operations. In this project, you will create a simple calculator using vanilla JavaScript, HTML, and CSS.
