--- a/_mdx/javascript/tic-tac-toe-vanilliajs.mdx
+++ b/_mdx/javascript/tic-tac-toe-vanilliajs.mdx
@@ -3,7 +3,7 @@ title: Tic Tac Toe
 tags: javascript, html, css
 description: a simple Tic Tac Toe game using HTML, CSS, and JavaScript
 expertise: beginner
-thumbId: pcpsVsyFp_s
+thumbId: -yhBOqHOr0c
 ---
 
 Tic Tac Toe is a classic game that has been enjoyed by people of all ages for generations. Now it's time to create your own version of this classic game using vanilla JavaScript!
