--- a/_mdx/javascript/url-shortener.mdx
+++ b/_mdx/javascript/url-shortener.mdx
@@ -3,7 +3,7 @@ title: URL Shortener
 tags: javascript, node.js, express
 description: a simple URL shortening application using Node.js and Express
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: mZnx9429i94
 ---
 
 Have you ever wanted to share a long URL with someone, but didn't want to take up too much space in a text message or social media post? A URL shortener can help with that!
