--- a/_mdx/python/recommendation-engine.mdx
+++ b/_mdx/python/recommendation-engine.mdx
@@ -3,7 +3,7 @@ title: Recommendation Engine
 tags: machine learning, recommendation, python
 description: a simple recommendation engine using a machine learning library and a database
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: UWVJaDvXW_c
 ---
 
 A recommendation engine suggests products or content to users based on their previous interactions using a machine learning library and a database. In this project, you will create a basic recommendation engine.
