--- a/_mdx/python/text-based-adventure-game.mdx
+++ b/_mdx/python/text-based-adventure-game.mdx
@@ -3,7 +3,7 @@ title: Text-Based Adventure Game
 tags: python, game development, text adventure
 description: a simple text-based adventure game where the user can navigate through a series of rooms and interact with objects and characters
 expertise: beginner
-thumbId: FILL_ME_IN
+thumbId: LJ9KY8pIH3E
 ---
 
 A text-based adventure game allows the user to navigate through a series of rooms and interact with objects and characters. In this project, you will create a simple text-based adventure game using Python.
