--- a/_mdx/python/twitter-scraper.mdx
+++ b/_mdx/python/twitter-scraper.mdx
@@ -3,7 +3,7 @@ title: Twitter Scraper
 tags: python, web scraping
 description: a simple Twitter scraper using Python and web scraping techniques
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: Lh_sFxD8AkI
 ---
 
 Twitter is a popular social media platform where users can post short messages, called tweets, and interact with others. As a data scientist or developer, you may want to analyze the content and sentiment of tweets for a particular topic or user.
