--- a/_mdx/python/virtual-assistant.mdx
+++ b/_mdx/python/virtual-assistant.mdx
@@ -3,7 +3,7 @@ title: Virtual Assistant
 tags: python, natural language processing, chatbot
 description: a simple virtual assistant application using a web framework and a chatbot library
 expertise: intermediate
-thumbId: pcpsVsyFp_s
+thumbId: 1DjbGRDh7-E
 ---
 
 A virtual assistant application allows users to interact with a natural language processing API using a web framework and a chatbot library. In this project, you will create a basic virtual assistant application using Python.
